--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,21 +4,40 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
-      - id: check-merge-conflict
       - id: check-yaml
+      - id: check-merge-conflict
 
   - repo: https://github.com/psf/black
-    rev: 24.10.0
+    rev: 25.9.0
     hooks:
       - id: black
+        args: ["--line-length", "120"]
 
   - repo: https://github.com/PyCQA/isort
-    rev: 5.13.2
+    rev: 7.0.0
     hooks:
       - id: isort
-        args: ["--profile", "black", "--python-version", "312"]
+        args: ["--profile", "black", "--line-length", "120"]
 
   - repo: https://github.com/PyCQA/flake8
     rev: 7.1.1
     hooks:
       - id: flake8
+        exclude: |
+          (?x)^(
+            migrations/|
+            staticfiles/|
+            \.venv/
+          )
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.6.9
+    hooks:
+      - id: ruff
+        args: ["--fix"]
+
+  - repo: https://github.com/adamchainz/django-upgrade
+    rev: 1.18.0
+    hooks:
+      - id: django-upgrade
+        args: ["--target-version", "5.1"]
